--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
 		</dependency>
-		<dependency>
-			<groupId>com.vladmihalcea</groupId>
-			<artifactId>hibernate-types-60</artifactId>
-			<version>2.21.1</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>io.hypersistence</groupId>-->
+<!--			<artifactId>hypersistence-utils-hibernate-63</artifactId>-->
+<!--			<version>3.7.3</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
