--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>io.hypersistence</groupId>-->
 <!--			<artifactId>hypersistence-utils-hibernate-63</artifactId>-->
