Prepare toggle ready and game state events

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:validate}
+logging.level.org.springframework.transaction=DEBUG
