--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@stomp/stompjs": "^7.0.0",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
